--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tracing = { version = "0.1", features = [
 ] }
 
 avian3d = "0.3.1"
+bevy-inspector-egui = "0.31.0"
 
 
 # Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
